error messages fixed with red boxes and not showing on login form

--- a/app/assets/stylesheets/login_page.scss
+++ b/app/assets/stylesheets/login_page.scss
@@ -99,7 +99,7 @@
    font-size: 10px;
 }
 
-.red-border-error{
+#red-border-error{   
    border-color: red;
    background-color: rgb(228, 196, 196);
 }
